Añadimos al calendario las vistas creadas

--- a/public/partials/partido-ejemplo.html
+++ b/public/partials/partido-ejemplo.html
@@ -1,4 +1,4 @@
-<div class="text-center" ng-repeat="balones in equiposCtrl.equipos.ejemplo">
+<div class="text-center" ng-repeat="balones in equipos.ejemplo">
 	<a href="#">
 		<img src="img/logo.png">
 		<p>
