--- a/public/partials/partido-images.html
+++ b/public/partials/partido-images.html
@@ -1,1 +1,1 @@
-<img class="escudo left-block" ng-src="img/{{equiposCtrl.equipos.equipoLocal | lowercase}}.jpg" height="180" /><img class="escudo right-block" ng-src="img/{{equiposCtrl.equipos.equipoVisitante | lowercase}}.jpg" height="200" />
+<img class="escudo left-block" ng-src="{{equipos.equipoLocal | imageify}}" height="180" /><img class="escudo right-block" ng-src="{{equipos.equipoVisitante | imageify}}" height="200" />
