--- a/public/partials/partido-equipos.html
+++ b/public/partials/partido-equipos.html
@@ -1,1 +1,1 @@
-<h1>{{equiposCtrl.equipos.equipoLocal}} - {{equiposCtrl.equipos.equipoVisitante}}</h1>
+<h1>{{equipos.equipoLocal}} - {{equipos.equipoVisitante}}</h1>
