--- a/public/partials/partido-goles.html
+++ b/public/partials/partido-goles.html
@@ -1,3 +1,3 @@
 <ul class="list-group">
-	<li class="list-group-item"><strong>Goles:</strong> <span ng-repeat="goles in equiposCtrl.equipos.goles" class="label label-primary">{{goles}}</span></li><!-- La función join que tenemos declarada, nos devuelve los elementos del array separados por coma -->
+	<li class="list-group-item"><strong>Goles:</strong> <span ng-repeat="goles in equipos.goles" class="label label-primary">{{goles}}</span></li><!-- La función join que tenemos declarada, nos devuelve los elementos del array separados por coma -->
 </ul>
