--- a/public/views/partidos.html
+++ b/public/views/partidos.html
@@ -1,4 +1,4 @@
-<div ng-controller="EquiposController as equiposCtrl"><!-- Indicamos mediante una directiva que controlador vamos a usar -->
+<div>
 	<div class="page-header">
 		<partido-equipos></partido-equipos>
 	</div>
@@ -8,9 +8,9 @@
 		</div>
 		<div class="col-md-6" ng-controller="TabsController as tabs">
 			<ul class="nav nav-tabs nav-justified">
-		        <li ng-class="{ active : tabs.tab === 1 }"><a ng-click="tabs.selectTab(1)" href="#">Resultado</a></li>
-		        <li ng-class="{ active : tabs.tab === 2 }"><a ng-click="tabs.selectTab(2)" href="#">Goles</a></li>
-		        <li ng-class="{ active : tabs.tab === 3 }"><a ng-click="tabs.selectTab(3)" href="#">Ejemplo</a></li>
+		        <li ng-class="{ active : tabs.tab === 1 }"><a ng-click="tabs.selectTab(1)">Resultado</a></li>
+		        <li ng-class="{ active : tabs.tab === 2 }"><a ng-click="tabs.selectTab(2)">Goles</a></li>
+		        <li ng-class="{ active : tabs.tab === 3 }"><a ng-click="tabs.selectTab(3)">Ejemplo</a></li>
 		    </ul>
 		    <div class="tab-content">
 		    	<!-- Resultado -->
