Arreglado problema con la directiva del calendario

--- a/public/views/calendario.html
+++ b/public/views/calendario.html
@@ -2,7 +2,7 @@
 	<div class="page-header">
 		<h1>Calendario</h1>
 	</div>
-	<div ng-repeat="partido in partidos"><!-- in partidos se refiere al nombre del archivo .json -->
+	<div ng-repeat="equipos in partidos"><!-- in partidos se refiere al nombre del archivo .json -->
 		<partido-equipos></partido-equipos>
 		<partido-images></partido-images>
 	</div>
