--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,3 +23,16 @@
 {
 	border-color: green;
 }
+
+.partidos
+{
+	margin-bottom: 10px;
+	border: 1px solid blue;
+	border-radius: 20px;
+	padding: 10px;
+}
+
+.partidos:hover
+{
+	border: 3px solid blue;
+}
