--- a/public/views/calendario.html
+++ b/public/views/calendario.html
@@ -2,7 +2,7 @@
 	<div class="page-header">
 		<h1>Calendario</h1>
 	</div>
-	<div class="partidos" ng-repeat="equipos in partidos"><!-- in partidos se refiere al nombre del archivo .json -->
+	<div class="partidos" ng-repeat="equipos in partidos"><!-- in partidos se refiere al nombre declarado en el controlador $scope.partidos -->
 		<a href="/#partidos/{{equipos.jornada | normalize}}">
 			<partido-equipos></partido-equipos>
 			<partido-images></partido-images>
