--- a/public/views/calendario.html
+++ b/public/views/calendario.html
@@ -2,10 +2,17 @@
 	<div class="page-header">
 		<h1>Calendario <small class="pull-right">Mostrando <span class="badge">{{partidos.length}}</span> Partidos</small></h1>
 	</div>
-	<div class="partidos" ng-repeat="equipos in partidos"><!-- in partidos se refiere al nombre declarado en el controlador $scope.partidos -->
-		<a href="/#partidos/{{equipos.jornada | normalize}}">
-			<partido-equipos></partido-equipos>
-			<partido-images></partido-images>
-		</a>
+	<!-- in partidos se refiere al nombre declarado en el controlador $scope.partidos -->
+	<div class="col-lg-3" ng-repeat="equipos in partidos">
+		<div class="partidos panel panel-primary">
+			<div class="panel-heading">
+				<partido-equipos></partido-equipos>
+			</div>
+			<div class="panel-body">
+				<a href="/#partidos/{{equipos.jornada | normalize}}">
+					<partido-images></partido-images>
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
