--- a/public/views/partidos.html
+++ b/public/views/partidos.html
@@ -29,6 +29,6 @@
 		</div>
 	</div>
 	<!-- Comentarios -->
-	<partido-comments></partido-comments>
+	<partido-comments jornada="{{partido.jornada}}"></partido-comments>
 	<!-- /Comentarios -->
 </div>
