Arreglado bug de localStorage y jornada en el placeholder del textarea, en lugar de partido es equipos

--- a/public/views/partidos.html
+++ b/public/views/partidos.html
@@ -29,6 +29,6 @@
 		</div>
 	</div>
 	<!-- Comentarios -->
-	<partido-comments jornada="{{partido.jornada}}"></partido-comments>
+	<partido-comments jornada="{{equipos.jornada}}"></partido-comments>
 	<!-- /Comentarios -->
 </div>
